# buzz-router

./: .env.example  Cargo.toml  NEXUS_Phase2_Chunks.md  PITCH.md  README.md  _trace_template.json  call_and_trace.sh  canary_test.sh  grafana_queries.txt  policy.toml  prometheus_alerts.yml  render_trace.sh  trace_b9893213-f619-4346-aa33-9a12e979c62f.json  trace_dbb7f17b-f2db-4bd1-9193-0f6d3c6ac0b7.json  trace_to_prometheus.py  validate_schema.sh  z3-ui.html
examples/: test_local_z3.rs  test_router.rs
src/: capabilities.rs  lib.rs  main.rs  policy.rs  router.rs  server.rs  types.rs
src/boundary/: Z3_QFlow_FIXED.html  mod.rs
src/core/: cost.rs  decision.rs  mod.rs  privacy.rs
src/engine/: mod.rs  mod.rs.bak  tools.rs
src/memory/: mod.rs
src/providers/: anthropic.rs  gemini.rs  groq.rs  groq.rs.bak  local_z3.rs  mod.rs  openai.rs
src/server/: mod.rs
src/session/: mod.rs  mod.rs.bak
src/vault/: mod.rs
