[package]
name = "buzz_router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core utilities
anyhow = "1.0.81"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
qfz3 = { path = "/home/prp/qfz3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Networking
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Database
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono"
]}

# Security & Crypto
aes-gcm = { version = "0.10.3", features = ["getrandom"] }
argon2 = "0.5.3"
secrecy = "0.8.0"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mime = "0.3"
http-body-util = "0.1"
