[package]
name = "buzz-router"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
qfz3 = { path = "../../qfz3/qfz3-engine" }
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
